# fall2023-cli

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  custom_area.txt
cmd/: cli.h  main.cpp
docs/: Doxyfile
internal/: common.h  function.h  log.h  method.h  method_nelder_mead.cpp  method_nelder_mead.h  method_random_walk.cpp  method_random_walk.h  random.cpp  random.h
ui/: cli.h  gui.h  gui_heatmap.h  gui_settings.h  gui_widgets.h  parse.h
